Ajout des composants Intro, Experiences, Education et Skills dans le template de la page d'accueil.

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div>
+  <app-intro></app-intro>
+  <app-experiences></app-experiences>
+  <app-education></app-education>
+  <app-skills></app-skills>
+</div>
