Ajout des sections d'éducation, d'expériences, d'introduction et de compétences avec leur contenu et styles associés, ainsi que la mise à jour du header et du footer pour une meilleure navigation.

--- a/src/app/pages/home/experiences/experiences.html
+++ b/src/app/pages/home/experiences/experiences.html
@@ -1,1 +1,6 @@
-<p>experiences works!</p>
+<section class="experiences-section">
+  <div class="experiences-content">
+    <h2>Expériences Professionnelles</h2>
+    <p>Section des expériences - contenu à venir</p>
+  </div>
+</section>
