--- a/src/app/pages/home/intro/intro.html
+++ b/src/app/pages/home/intro/intro.html
@@ -1,1 +1,6 @@
-<p>intro works!</p>
+<section class="intro-section">
+  <div class="intro-content">
+    <h1>Bienvenue</h1>
+    <p>Introduction section - contenu à venir</p>
+  </div>
+</section>
