--- a/src/app/pages/home/education/education.html
+++ b/src/app/pages/home/education/education.html
@@ -1,1 +1,6 @@
-<p>education works!</p>
+<section class="education-section">
+  <div class="education-content">
+    <h2>Formation</h2>
+    <p>Section de la formation - contenu à venir</p>
+  </div>
+</section>
